[package]
name = "rinha_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.30", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v7", "serde"] }
